--- a/index.html
+++ b/index.html
@@ -26,36 +26,54 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <a href="">
+                    <a class="tit" href="">
+                        <h2> 刚刚为您推荐了21条资讯</h2>
+                    </a>
                     <img src="https://k.sinaimg.cn/n/news/transform/310/w710h400/20200619/a4fe-ivffpcs3809613.jpg/w710h400z1l50t1c53.jpg?by=comos" alt="">
                     <p class="swiper-text"><span>高校为毕业生送出“金饭碗”</span></p>
                 </a>
             </div>
             <div class="swiper-slide">
                 <a href="">
+                    <a class="tit" href="">
+                        <h2> 刚刚为您推荐了21条资讯</h2>
+                    </a>
                     <img src="https://k.sinaimg.cn/n/tech/transform/310/w710h400/20200619/7b98-ivffpcs3966558.jpg/w710h400z1l50t15e9.jpg?by=comos" alt="">
                     <p class="swiper-text"><span>高校为毕业生送出“金饭碗”</span></p>
                 </a>
             </div>
             <div class="swiper-slide">
                 <a href="">
+                    <a class="tit" href="">
+                        <h2> 刚刚为您推荐了21条资讯</h2>
+                    </a>
                     <img src="https://k.sinaimg.cn/n/news/transform/310/w710h400/20200619/0fcb-ivffpcs3807497.jpg/w710h400z1l50t1091.jpg?by=comos" alt="">
                     <p class="swiper-text"><span>高校为毕业生送出“金饭碗”</span></p>
                 </a>
             </div>
             <div class="swiper-slide">
                 <a href="">
+                    <a class="tit" href="">
+                        <h2> 刚刚为您推荐了21条资讯</h2>
+                    </a>
                     <img src="https://k.sinaimg.cn/n/news/transform/310/w710h400/20200619/a4fe-ivffpcs3809613.jpg/w710h400z1l50t1c53.jpg?by=comos" alt="">
                     <p class="swiper-text"><span>高校为毕业生送出“金饭碗”</span></p>
                 </a>
             </div>
             <div class="swiper-slide">
                 <a href="">
+                    <a class="tit" href="">
+                        <h2> 刚刚为您推荐了21条资讯</h2>
+                    </a>
                     <img src="https://k.sinaimg.cn/n/tech/transform/310/w710h400/20200619/7b98-ivffpcs3966558.jpg/w710h400z1l50t15e9.jpg?by=comos" alt="">
                     <p class="swiper-text"><span>高校为毕业生送出“金饭碗”</span></p>
                 </a>
             </div>
             <div class="swiper-slide">
                 <a href="">
+                    <a class="tit" href="">
+                        <h2> 刚刚为您推荐了21条资讯</h2>
+                    </a>
                     <img src="https://k.sinaimg.cn/n/news/transform/310/w710h400/20200619/0fcb-ivffpcs3807497.jpg/w710h400z1l50t1091.jpg?by=comos" alt="">
                     <p class="swiper-text"><span>高校为毕业生送出“金饭碗”</span></p>
                 </a>
@@ -65,7 +83,7 @@
         <div class="swiper-pagination"></div>
         
     </div>
-    <!-- 左图右文 -->
+    <!-- 文字 -->
     <section class="ifeng-sec">
         <a href="">
             <!-- 右文 -->
@@ -80,6 +98,7 @@
             </aside>
         </a>
     </section>
+    <!-- 左图右文 -->
     <section class="ifeng-sec">
         <a href="">
             <!-- 左图 -->
@@ -135,11 +154,105 @@
             </div>
             <aside class="text1 text">
             <p>
+                <span class="source">参考消息网</span>
                 <span class="time">1分钟</span>
                 <span class="num">1000
                     <i class="icon-font icon-com"></i>
                 </span>
             </p>
+            </aside>
+        </a>
+    </section>
+    <!-- 左文右图 -->
+    <section class="ifeng-sec">
+        <a href="">
+            <!-- 左图 -->
+            <figure class="pic">
+                <img src="https://k.sinaimg.cn/n/default/transform/266/w640h426/20200619/a45e-ivffpcs4153457.png/w200h134f1t0l50q90c55.jpg" alt="">
+            </figure>
+            <!-- 右文 -->
+            <aside class="text">
+                <h2>这三年，习近平治国理政思想 及成就这三年，习近平治国理政思想 及成就</h2>
+                <p>
+                    <span class="time">1分钟</span>
+                    <span class="num">1000
+                        <i class="icon-font icon-com"></i>
+                    </span>
+                </p>
+            </aside>
+        </a>
+    </section>
+    <section class="ifeng-sec">
+        <a href="">
+            <!-- 左图 -->
+            <figure class="pic">
+                <img src="https://k.sinaimg.cn/n/default/transform/266/w640h426/20200619/a45e-ivffpcs4153457.png/w200h134f1t0l50q90c55.jpg" alt="">
+            </figure>
+            <!-- 右文 -->
+            <aside class="text">
+                <h2>这三年，习近平治国理政思想 及成就这三年，习近平治国理政思想 及成就</h2>
+                <p>
+                    <span class="time">1分钟</span>
+                    <span class="num">1000
+                        <i class="icon-font icon-com"></i>
+                    </span>
+                </p>
+            </aside>
+        </a>
+    </section>
+    <section class="ifeng-sec">
+        <a href="">
+            <!-- 左图 -->
+            <figure class="pic">
+                <img src="https://k.sinaimg.cn/n/default/transform/266/w640h426/20200619/a45e-ivffpcs4153457.png/w200h134f1t0l50q90c55.jpg" alt="">
+            </figure>
+            <!-- 右文 -->
+            <aside class="text">
+                <h2>这三年，习近平治国理政思想 及成就这三年，习近平治国理政思想 及成就</h2>
+                <p>
+                    <span class="time">1分钟</span>
+                    <span class="num">1000
+                        <i class="icon-font icon-com"></i>
+                    </span>
+                </p>
+            </aside>
+        </a>
+    </section>
+    <!-- 上文下图 -->
+    <section class="ifeng-sec1 ifeng-sec2">
+        <a href="">
+            <aside class="text1 text">
+                <h2>这三年，习近平治国理政思想 及成就</h2>
+            </aside>
+            <figure class="pic">
+                    <img src="https://s3.pfp.sina.net/ea/ad/12/3/f19e5b738ac68f78555edfabfa884cab.jpg" alt="">
+            </figure>
+            <aside class="text1 text">
+            <p>
+                <span class="source">参考消息网</span>
+                <span class="time">1分钟</span>
+                <span class="num">1000
+                    <i class="icon-font icon-com"></i>
+                </span>
+            </p>
+            </aside>
+        </a>
+    </section>
+    <section class="ifeng-sec">
+        <a href="">
+            <!-- 左图 -->
+            <figure class="pic">
+                <img src="https://k.sinaimg.cn/n/default/transform/266/w640h426/20200619/a45e-ivffpcs4153457.png/w200h134f1t0l50q90c55.jpg" alt="">
+            </figure>
+            <!-- 右文 -->
+            <aside class="text">
+                <h2>这三年，习近平治国理政思想 及成就这三年，习近平治国理政思想 及成就</h2>
+                <p>
+                    <span class="time">1分钟</span>
+                    <span class="num">1000
+                        <i class="icon-font icon-com"></i>
+                    </span>
+                </p>
             </aside>
         </a>
     </section>
